--- a/.gitignore
+++ b/.gitignore
@@ -248,4 +248,5 @@ fabric.properties
 
 # PyPI configuration file
 .pypirc
-/Dokumente/
+/Dokumente/connect4_entwurf.drawio
+/Dokumente/connect4_entwurf.png
